booking module updates and return fixes